--- a/scss/app.scss
+++ b/scss/app.scss
@@ -48,3 +48,26 @@
 
 @include motion-ui-transitions;
 @include motion-ui-animations;
+
+
+//moje własne style
+@import 'pages/login.scss'
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
