Strona login wykonana pełna struktura HTML oraz nadane zostały style w SCSS

--- a/scss/app.scss
+++ b/scss/app.scss
@@ -51,7 +51,15 @@
 
 
 //moje własne style
-@import 'pages/login.scss'
+@import 'kolory.scss';
+@import 'typografia.scss';
+@import 'domieszki.scss';
+@import 'pages/login.scss';
+@import 'componets/buttony.scss';
+@import 'componets/forms.scss';
+@import 'componets/ikony.scss';
+
+
 
 
 
