Struktura i style hedera

--- a/scss/app.scss
+++ b/scss/app.scss
@@ -55,6 +55,7 @@
 @import 'typografia.scss';
 @import 'domieszki.scss';
 @import 'pages/login.scss';
+@import 'pages/dashboard.scss';
 @import 'componets/buttony.scss';
 @import 'componets/forms.scss';
 @import 'componets/ikony.scss';
