--- a/scss/domieszki.scss
+++ b/scss/domieszki.scss
@@ -40,3 +40,8 @@
 	transition: all 0.4s ease-in-out;
 }
 
+@mixin secondTransition{
+	transition: all 3s ease-in-out;
+	-webkit-transition: all 3s ease-in-out;
+}
+
