Strona grywlizacja ukończona

--- a/scss/app.scss
+++ b/scss/app.scss
@@ -56,6 +56,9 @@
 @import 'domieszki.scss';
 @import 'pages/login.scss';
 @import 'pages/dashboard.scss';
+@import 'pages/grywalizacja.scss';
+@import 'pages/budgets.scss';
+@import 'componets/header.scss';
 @import 'componets/buttony.scss';
 @import 'componets/forms.scss';
 @import 'componets/ikony.scss';
